--- a/movie/src/app/layout/movie-list/movie-list.component.html
+++ b/movie/src/app/layout/movie-list/movie-list.component.html
@@ -1,1 +1,3 @@
-<p>movie-list works!</p>
+<div class="movie-grid">
+  <app-movie-card  *ngFor="let movie of movies" [movie]="movie"></app-movie-card>
+</div>
