--- a/movie/src/app/layout/movie-card/movie-card.component.css
+++ b/movie/src/app/layout/movie-card/movie-card.component.css
@@ -1,29 +1,181 @@
-.movie-card {
+.container__card-01 {
+  margin-top:10px;
   display: flex;
-  flex-direction: column;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  padding: 10px;
-  margin: 10px;
-  width: 200px;
+  flex-wrap: wrap;
+  flex-direction: row;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+ }
+
+.container__card-image {
+  max-width: 300px;
+  height: 400px;
 }
 
-.movie-card img {
-  width: 100%;
-  height: auto;
-  border-radius: 5px;
+.container__card-full {
+  transition: all 0.3s ease;
+  border-radius: 10px;
 }
 
-.movie-details {
-  margin-top: 10px;
+.container__card-full:hover {
+  transform: scale(1.02);
 }
 
-.movie-details h2 {
-  font-size: 1.2em;
-  margin-bottom: 5px;
+.container__card-full:hover .card-details {
+  opacity: 1;
 }
 
-.movie-details p {
-  font-size: 1em;
-  color: #888;
+.card-details {
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.8);
+  padding: 20px;
+  color: #fff;
+  transition: all 0.3s ease;
+  min-height: 150px;
+  opacity: 0;
+}
+
+.movie-genres{
+  display: flex;
+  flex-direction: row;
+  /* flex-direction: column; */
+  flex-wrap: wrap;
+}
+
+.genres {
+  font-size: 10px;
+  border: 1px solid #ef4444;
+  background-color: rgba(229,56,42, 0.2);
+  border-radius: 20px;
+  padding: 2px 4px;
+}
+
+@media (max-width: 768px) {
+  .container__card-full {
+    width: 100%;
+  }
+
+  .container__card-image {
+    height: auto;
+  }
+
+  .container__card-full:hover {
+    transform: none;
+  }
+
+  .container__card-01 {
+    margin-top:10px;
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .movie-genres{
+    flex-direction: column;
+  }
+
+  .container__card-image {
+    max-width: 100%;
+    height: auto;
+  }
+
+  .container__card-full:hover {
+    transform: none;
+  }
+  .genres {
+    font-size: 10px;
+  }
+}
+
+@media (min-width: 769px) and (max-width: 1024px) {
+  .container__card-01 {
+    margin-top:10px;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 1.5rem;
+    padding: 1rem;
+  }
+
+  .container__card-image {
+    max-width: 100%;
+    height: auto;
+  }
+
+  .container__card-full:hover {
+    transform: none;
+  }
+  .movie-genres{
+    flex-direction: column;
+  }
+  .genres {
+    font-size: 10px;
+
+  }
+}
+
+@media (min-width: 768px) {
+  /* .movie-genres{
+    flex-direction: column;
+  } */
+  .genres {
+    font-size: 10px;
+  }
+  .container__card-full:hover .card-details {
+    opacity: 1;
+  }
+}
+
+@media (max-width: 767px) {
+  .card-details {
+    opacity: 1;
+  }
+  .genres {
+    font-size: 10px;
+    width: 50%;
+
+  }
+  .movie-genres{
+    flex-direction: column;
+  }
+}
+
+@media (max-width: 1024px) {
+  /* .container__card-01 {
+    padding: 20px;
+  } */
+  .genres {
+    font-size: 10px;
+  }
+  .movie-genres{
+    flex-direction: column;
+  }
+  .card-details {
+    text-align: center;
+    position: relative;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgba(0, 0, 0, 0.2);
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+  }
+  .card-details::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 30px;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.8) 0%, transparent 10%);
+    z-index: 1;
+  }
+
+  .card-details * {
+    position: relative;
+    z-index: 2;
+  }
 }
