--- a/movie/src/app/layout/movie-list/movie-list.component.html
+++ b/movie/src/app/layout/movie-list/movie-list.component.html
@@ -1,3 +1,6 @@
-<div class="movie-grid">
-  <app-movie-card  *ngFor="let movie of movies" [movie]="movie"></app-movie-card>
+<div class="container__movie-list " *ngIf="movies && movies.length > 0">
+  <div class="grid grid-cols-2 md:grid-cols-5 gap-4 max-w-1440">
+    <app-movie-card *ngFor="let movie of movies" [movie]="movie">
+    </app-movie-card>
+  </div>
 </div>
