refactor tests e config do angular

--- a/movie/src/app/layout/home/home.component.html
+++ b/movie/src/app/layout/home/home.component.html
@@ -9,6 +9,30 @@
   <p>{{ error }}</p>
 </div>
 
+<section *ngIf="genreOptions.length > 0" class="container__list-options flex flex-wrap container mx-auto max-w-1440">
+  <app-list-options
+    [options]="genreOptions"
+    (onChange)="onGenreChange($event)"
+    [selectedOption]= "selectedGenreValue"
+    [toClear]="toClear"
+    title="Gêneros">
+  </app-list-options>
+
+  <app-list-options
+    [options]="sortOptions"
+    (onChange)="onSortChange($event)"
+    [selectedOption]= "selectedSortValue"
+    [toClear]="toClear"
+    title="Ordenar Por">
+  </app-list-options>
+
+  <button
+    (click)="clearFilters()"
+    class="btn-clear">
+    Limpar
+  </button>
+</section>
+
 <app-movie-list  [movies]="movies"></app-movie-list>
 
 <app-movie-pagination *ngIf="movies && movies.length > 0"
