Project create e suas estilizações

--- a/movie/src/app/layout/home/home.component.html
+++ b/movie/src/app/layout/home/home.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="!movies || (movies.length === 0 )" class="flex justify-center" >
-  <!-- <mat-progress-bar class="bg-rose-500 spinner-movie" mode="indeterminate"></mat-progress-bar> -->
+  <mat-progress-bar class="bg-rose-500 spinner-movie" mode="indeterminate"></mat-progress-bar>
 </div>
 
 <div *ngIf="loading" class="loading-indicator">
