--- a/movie/src/app/layout/list-options/list-options.component.html
+++ b/movie/src/app/layout/list-options/list-options.component.html
@@ -1,13 +1,11 @@
-<div class="mx-auto max-w-1440 px-4">
+<section class="mx-auto max-w-1440 px-4">
   <div class="mt-5 w-full flex flex-col md:flex-row gap-4 items-center justify-start">
 
-    <select [(ngModel)]="selectedOption" (change)="selectOption()"  class="form-select text-white hover:bg-text-white w-full md:w-auto">
-      <option class="option-disabled" [value]="0" disabled >--Por favor escolha uma opção--</option>
-
+    <select [(ngModel)]="selectedOption" (change)="selectOption()"  class="form-select text-white w-full md:w-auto">
+      <option [value]="0" disabled >{{optionTitle}}</option>
       <option *ngFor="let option of optionsObj" [value]="option.value" >
         {{ option.label }}
       </option>
-
     </select>
   </div>
-</div>
+</section>
