--- a/movie/src/app/layout/movie-card/movie-card.component.css
+++ b/movie/src/app/layout/movie-card/movie-card.component.css
@@ -16,6 +16,7 @@
 .container__card-full {
   transition: all 0.3s ease;
   border-radius: 10px;
+  cursor: pointer;
 }
 
 .container__card-full:hover {
