--- a/movie/src/app/layout/movie-card/movie-card.component.html
+++ b/movie/src/app/layout/movie-card/movie-card.component.html
@@ -3,7 +3,7 @@
   <div
     class="container__card-full transform transition duration-300 ease-in-out hover:scale-105 bg-white rounded-lg overflow-hidden shadow-lg"
     [routerLink]="['/movie', movie?.id]">
-    <div class="card-content bg-bd-header">
+    <div class="card-content bg-color-header">
       <img class="container__card-image object-cover w-full h-64 md:h-96" [src]="movie?.image_path"
         [title]="movie?.title">
       <div
