--- a/movie/src/app/layout/movie-detail/movie-detail.component.html
+++ b/movie/src/app/layout/movie-detail/movie-detail.component.html
@@ -4,7 +4,7 @@
 <div *ngIf="error">{{ error }}</div>
 
 <section *ngIf="movie" class="flex flex-wrap justify-between items-center mx-auto max-w-1440 my-5">
-  <div class="w-1/2">
+  <div class="w-1/2 mobile">
     <div class="p-4">
       <button (click)="goBack()" class="flex items-center justify-center text-white rounded-full">
         <i class='fas fa-long-arrow-alt-left border border-red-500'></i> Voltar à lista de filmes
@@ -16,16 +16,15 @@
 
       <span class="text-white ">★ {{ movie.vote_average.toFixed(1) }}</span>
       <span class="text-white">{{ movie.release_year }}</span>
-      <div class="movie-genres">
-        <!-- <span class="genres text-xs border border-red-500 text-white m-1 rounded-full"
-          *ngFor="let genre of movie?.genres; let isLast=last">
-          {{ movie.genres }}<ng-container *ngIf="!isLast"></ng-container>
-        </span> -->
-      </div>
+      <!-- <div class="movie-genres">
+        <span class="genres text-xs border border-red-500 text-white m-1 rounded-full">
+          {{ genre }}
+        </span>
+      </div> -->
     </div>
   </div>
 
-  <div class="w-1/2 p-4 flex justify-end">
-    <img [src]="movie.image_path" alt="Poster" class="rounded-lg degrade ">
+  <div class="w-1/2 p-4 flex justify-end mobile-image">
+    <img [src]="movie.image_path" alt="Poster" class="rounded-lg">
   </div>
 </section>
