--- a/movie/src/app/layout/list-options/list-options.component.css
+++ b/movie/src/app/layout/list-options/list-options.component.css
@@ -19,5 +19,12 @@
   background-color: #0E1428;
   padding: 8px 4px;
   border-radius: 20px;
+
+}
+
+@media(max-width: 767px){
+  .form-select option{
+    text-align: center;
+  }
 }
 
