--- a/movie/src/app/layout/btn-clear/btn-clear.component.css
+++ b/movie/src/app/layout/btn-clear/btn-clear.component.css
@@ -2,6 +2,7 @@
   .btn-clear {
     width: 100%;
     height: 40px; /* Ajuste a altura automaticamente para se ajustar ao conteúdo */
+    text-align: center;
   }
 }
 @media (min-width: 767px) {
@@ -18,6 +19,9 @@
   border-top: 2px solid #ef4444;
   background-color: transparent;
   color: #f9f9f9;
+  align-content: center;
+  text-align: center;
+  align-items: center;
 
   /* height: 43px; */
   height: 40px;
