--- a/movie/src/app/layout/movie-card/movie-card.component.html
+++ b/movie/src/app/layout/movie-card/movie-card.component.html
@@ -9,7 +9,7 @@
       <div
         class="card-details p-4 absolute bottom-0 left-0 right-0 bg-black bg-opacity-80 text-white opacity-0 transition-opacity duration-300 ease-in-out hover:opacity-100 flex flex-col justify-center">
         <h3 class="text-lg md:text-xl font-bold text-left mb-2">{{ movie?.title }}</h3>
-        <p class="release_year text-xs md:text-sm text-left">Lançamento: {{ movie?.release_year }}</p>
+        <p class="release_year text-xs md:text-sm text-left">{{ movie?.release_year }}</p>
         <div class="movie-genres">
           <span class="genres text-xs border border-red-500 text-white m-1 rounded-full"
             *ngFor="let genre of movie?.genres; let isLast=last">
