--- a/movie/src/app/layout/footer/footer.component.html
+++ b/movie/src/app/layout/footer/footer.component.html
@@ -6,7 +6,7 @@
   </a>
     <div class="socialIcons">
 
-    <a href="https://github.com/in/elizabetefabri" target="_blank">
+    <a href="https://github.com/elizabetefabri" target="_blank">
       <i class="fab fa-github text-color-font hover:text-color-red"></i>
     </a>
     <a href="https://www.linkedin.com/in/elizabetefabri/" target="_blank">
