Refactor: Alterações modificadas com base nas orientações do Danilo durate a PF

--- a/movie/src/app/layout/list-options/list-options.component.html
+++ b/movie/src/app/layout/list-options/list-options.component.html
@@ -1,9 +1,8 @@
 <section class="mx-auto max-w-1440 px-4">
   <div class="mt-5 w-full flex flex-col md:flex-row gap-4 items-center justify-start">
-
-    <select [(ngModel)]="selectedOption" (change)="selectOption()"  class="form-select text-white w-full md:w-auto">
-      <option [value]="0" disabled >{{optionTitle}}</option>
-      <option *ngFor="let option of optionsObj" [value]="option.value" >
+    <select [(ngModel)]="selectedOption" (change)="selectOption()" class="form-select text-white w-full md:w-auto">
+      <option [value]="0" disabled>--Por favor escolha uma opção--</option>
+      <option *ngFor="let option of optionsObj" [value]="option.value">
         {{ option.label }}
       </option>
     </select>
