--- a/movie/src/app/layout/home/home.component.html
+++ b/movie/src/app/layout/home/home.component.html
@@ -1,5 +1,5 @@
 <!-- HOME.HTML -->
-<div *ngIf="!movies || (movies.length === 0 )" class="flex justify-center" >
+<div *ngIf="!movies || (movies.length === 0 )" class="flex justify-center">
   <mat-progress-bar class="bg-rose-500 spinner-movie" mode="indeterminate"></mat-progress-bar>
 </div>
 
@@ -11,38 +11,22 @@
 </div>
 
 <section *ngIf="genreOptions.length > 0" class="container__list-options flex flex-wrap container mx-auto max-w-1440">
-  <app-list-options
-    [ngClass]="{'w-full': isMobile, 'md:w-1/2': isMobile}"
-    [options]="genreOptions"
-    (onChange)="onGenreChange($event)"
-    [selectedOption]= "selectedGenreValue"
-    [isSorting]="false"
-    title="Gêneros"
-    [optionTitle]="'--Por favor escolha uma opção--'"
-    (onClear)="clearFilters()">
+  <app-list-options [ngClass]="{'w-full': isMobile, 'md:w-1/2': isMobile}" [options]="genreOptions"
+    (onChange)="onGenreChange($event)" [selectedOption]="selectedGenreValue" [isSorting]="false" title="Gêneros"
+    [onClear]="clearGenreSubject.asObservable()">
   </app-list-options>
 
-  <app-list-options
-    [ngClass]="{'w-full': isMobile, 'md:w-1/2': isMobile}"
-    [options]="sortOptions"
-    (onChange)="onSortChange($event)"
-    [selectedOption]= "selectedSortValue"
-    [isSorting]="true"
-    title="Ordenar Por"
-    [optionTitle]="'--Por favor escolha uma opção--'"
-    (onClear)="clearFilters()">
+  <app-list-options [ngClass]="{'w-full': isMobile, 'md:w-1/2': isMobile}" [options]="sortOptions"
+    (onChange)="onSortChange($event)" [selectedOption]="selectedSortValue" [isSorting]="true" title="Ordenar Por"
+    [onClear]="clearSortSubject.asObservable()">
   </app-list-options>
 
-  <app-btn-clear
-  [ngClass]="{'w-full': isMobile, 'md:w-1/2': isMobile}"
-  ></app-btn-clear>
+  <app-btn-clear (clearEvent)="clearFilters() " [ngClass]="{'w-full': isMobile, 'md:w-1/2': isMobile}"></app-btn-clear>
 
 </section>
 
-<app-movie-list  [movies]="movies"></app-movie-list>
+<app-movie-list [movies]="movies"></app-movie-list>
 
-<app-movie-pagination *ngIf="movies && movies.length > 0"
-  [currentPage]="paginationState.currentPage"
-  [totalPages]="paginationState.totalPages"
-  (onSelectPage)="onPageChange($event)">
+<app-movie-pagination *ngIf="movies && movies.length > 0" [currentPage]="paginationState.currentPage"
+  [totalPages]="paginationState.totalPages" (onSelectPage)="onPageChange($event)">
 </app-movie-pagination>
