--- a/movie/src/app/layout/movie-detail/movie-detail.component.css
+++ b/movie/src/app/layout/movie-detail/movie-detail.component.css
@@ -1,4 +1,5 @@
-.container--btnVoltar, .container--descricao {
+.container--btnVoltar,
+.container--descricao {
   width: 50%;
 }
 
@@ -12,11 +13,10 @@ i {
   margin-right: 10px;
 }
 
-
-h2{
+h2 {
   margin-bottom: 20px;
 }
-h3{
+h3 {
   margin-bottom: 20px;
   font-weight: 300;
   font-size: 16px;
@@ -26,7 +26,7 @@ span {
   /* font-weight: bold; */
   margin: 20px 20px 20px 0px;
 }
-.movie-genres{
+.movie-genres {
   display: flex;
   flex-direction: row;
   /* flex-direction: column; */
@@ -36,30 +36,30 @@ span {
 .genres {
   font-size: 10px;
   border: 1px solid #ef4444;
-  background-color: rgba(229,56,42, 0.2);
+  background-color: rgba(229, 56, 42, 0.2);
   border-radius: 20px;
   padding: 2px 4px;
 }
 
-@media (min-width: 767px){
+@media (min-width: 767px) {
   img {
     width: 70%;
     height: auto;
     border-radius: 10px;
   }
 }
-@media (max-width: 767px){
-  section{
+@media (max-width: 767px) {
+  section {
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
     justify-content: center;
     align-items: center;
-}
+  }
   .mobile {
     width: 100%;
   }
-  .mobile-image{
+  .mobile-image {
     display: flex;
     justify-content: center;
     width: 100%;
