--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -2,7 +2,7 @@
   <nav class="mx-auto flex items-center justify-between max-w-1440" aria-label="Global" >
     <div class="flex lg:flex-1">
       <a routerLink="['/']" class="-m-1.5 p-1.5">
-        <img class="w-auto"  src="../../../assets/logo.png" alt="LOGO">
+        <img class="w-auto"  src="./assets/logo.png" alt="LOGO">
       </a>
     </div>
   </nav>
